--- a/style.css
+++ b/style.css
@@ -1,7 +1,64 @@
-bg-img {
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fjalla+One&family=Roboto+Slab&family=Ubuntu:wght@400;500&display=swap");
+@keyframes slideInFromLeft {
+    0% {
+        transform: translateX(-100%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes expand {
+    from {
+        border-radius: 35px;
+        transform: scale(2);
+        opacity: 0;
+        background: #747eb4;
+    }
+}
+
+@media screen and (min-width: 40.5em) {
+    .product-img {
+        width: 50%;
+        float: left;
+        border-radius: 35px;
+    }
+}
+
+:root {
+    --black: rgb(0, 0, 0);
+    --green: rgb(245, 49, 0);
+    --backgroundGreen: rgb(226, 66, 3);
+    --white: rgb(255, 255, 255);
+    --blue: rgb(9, 207, 92);
+}
+
+html {
+    height: 100%;
+}
+
+.hide {
+    display: none;
+}
+
+.column {
+    width: 100%;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    min-height: 100%;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    animation: 2s ease-out 6s 10 slideInFormdown;
+}
+
+.bg-img {
     width: 100%;
     height: 100%;
-    background-image: url(bg.jpg);
+    background-image: url(nature.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -16,122 +73,311 @@ bg-img {
     filter: blur(20px);
 }
 
-table {
-    width: 100%;
+header,
+form {
+    min-height: 10vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin: 2rem;
+    border-radius: 35px;
 }
 
-table {
-    border-radius: 40px;
-    font-size: large;
-    box-shadow: rgba(69, 131, 212, 0.705) 200px 15px 105px, rgba(212, 4, 4, 0.247) 100px 160px 160px;
-    border-collapse: collapse;
-}
-
-table.list {
-    border-radius: 400px;
-    box-shadow: rgba(69, 131, 212, 0.705) 200px 15px 105px, rgba(212, 4, 4, 0.247) 100px 160px 160px;
-    width: 100%;
-}
-
-td,
-th {
-    text-align: left;
-    padding: 8px;
-}
-
-.name {
-    border-radius: 40px;
-    font-size: 20px;
-    box-sizing: border-box;
-    box-shadow: rgba(69, 131, 212, 0.705) 200px 15px 105px, rgba(212, 4, 4, 0.247) 100px 160px 160px;
-}
-
-tr:nth-child(even),
-table.list thead>tr {
-    box-shadow: rgb(24, 52, 214) 0px 5px 15px, rgba(134, 31, 31, 0.767) 0px 6px 6px;
-    border-radius: 40px;
-    /* background-color: #0654e6cc; */
-}
-
-input[type=text],
-input[type=number] {
-    box-shadow: rgba(69, 131, 212, 0.705) 0px 5px 15px, rgba(212, 4, 4, 0.247) 0px 6px 6px;
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid rgb(84, 157, 253);
-    border-radius: 40px;
-    box-sizing: border-box;
-}
-
-select {
-    box-shadow: rgba(69, 131, 212, 0.705) 0px 5px 15px, rgba(212, 4, 4, 0.247) 0px 6px 6px;
-    width: 100%;
-    padding: 8px 10px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 40px;
-    box-sizing: border-box;
-}
-
-input[type=email] {
-    box-shadow: rgba(69, 131, 212, 0.705) 0px 5px 15px, rgba(212, 4, 4, 0.247) 0px 6px 6px;
-    width: 100%;
-    padding: 12px 20px;
-    margin: 18px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 40px;
-    box-sizing: border-box;
-}
-
-input[type=submit] {
-    box-shadow: rgba(69, 131, 212, 0.705) 0px 5px 15px, rgba(212, 4, 4, 0.247) 0px 6px 6px;
-    width: 30%;
-    background-color: #ddd;
-    color: rgb(48, 126, 199);
-    padding: 14px 20px;
-    margin: 8px 0;
+form input,
+form button,
+.delete-all {
+    padding: 10px 20px;
+    margin: 1rem;
+    font-size: 2rem;
+    outline: none;
+    width: fit-content;
+    background-color: white;
+    border-radius: 5px;
     border: none;
-    border-radius: 40px;
-    cursor: pointer;
+    box-shadow: rgb(170, 169, 169) 5px 5px 20px;
 }
 
-input[type=reset] {
-    box-shadow: rgba(69, 131, 212, 0.705) 0px 5px 15px, rgba(212, 4, 4, 0.247) 0px 6px 6px;
-    width: 30%;
-    background-color: #ddd;
-    color: rgb(53, 122, 190);
-    padding: 14px 20px;
-    margin: 14px 0px;
+form button:hover {
+    color: var(--white);
+}
+
+.delete-all {
+    background-color: rgb(250, 121, 1);
+    color: white;
+    width: 200px;
+    margin: auto auto 1.5rem;
+}
+
+.delete-all:hover {
+    background-color: rgb(201, 97, 0);
+}
+
+.todo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.todo-list {
+    min-width: 40%;
+    list-style: none;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+.todo {
+    margin: 0.5rem;
+    background: #FFF;
+    font-size: 2rem;
+    color: var(--black);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: all 0.5s ease;
+    outline: none;
+    border-radius: 5px;
+    animation: expand .5s ease-in-out;
+}
+
+.main_heading h1 {
+    font-size: 5rem;
+}
+
+.filter-todo {
+    padding: 1rem;
+}
+
+.todo li {
+    flex: 2;
+}
+
+.trash-btn,
+.complete-btn {
+    background: rgb(236, 123, 17);
+    color: #cf0e0e;
     border: none;
-    border-radius: 40px;
+    padding: 2rem;
     cursor: pointer;
+    font-size: 1rem;
 }
 
-form div.form-action-buttons {
-    border-radius: 40px;
-    box-shadow: rgb(34, 177, 243) 1px 1px 20px;
-    text-align: right;
+.complete-btn {
+    background-color: #55acee;
+    color: rgb(240, 21, 21);
 }
 
-a {
+.edit-btn {
+    border: none;
+    padding: 2rem;
     cursor: pointer;
-    text-decoration: underline;
-    color: #0000ee;
-    margin-right: 40px;
-    box-shadow: rgba(69, 131, 212, 0.705) 200px 15px 105px, rgba(90, 50, 50, 0.116) 100px 160px 160px;
+    font-size: 1rem;
 }
 
-label.validation-error {
-    color: rgb(250, 12, 12);
-    box-shadow: rgba(69, 131, 212, 0.705) 200px 15px 105px, rgba(212, 4, 4, 0.247) 100px 160px 160px;
-    border-radius: 40px;
-    margin-left: 500px;
+.todo-item {
+    padding: 0rem 0.5rem;
+    line-break: anywhere;
 }
 
-.hide {
-    display: none;
+.fa-trash,
+.fa-check {
+    pointer-events: none;
+}
+
+.fall {
+    transform: translateY(10rem) rotateZ(20deg);
+    opacity: 0;
+}
+
+.completed {
+    text-decoration: line-through;
+    opacity: 0.5;
+}
+
+.todoform {
+    display: flex;
+    flex-direction: row;
+}
+
+@media only screen and (max-width: 440px) {
+    .abc {
+        flex-direction: column;
+    }
+    .todoform {
+        flex-direction: column;
+    }
+}
+
+.footer h3 {
+    margin-block-start: 0;
+    margin-block-end: 0;
+    color: #FFF;
+    height: 3.5rem;
+}
+
+.social-icon {
+    width: 4.5rem;
+    margin: 1rem 0.5rem;
+    padding: 1rem;
+    border-radius: 1rem;
+}
+
+.true {
+    display: square;
+}
+
+.content {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    padding: 10px;
+    animation-name: slideIn;
+    animation-duration: 0.4s;
+    width: fit-content;
+    margin: auto;
+}
+
+.green {
+    background-color: rgb(76, 165, 76);
+}
+
+.red {
+    background-color: red;
+    border-radius: 0.25em;
+    font-family: 'Poppins';
+}
+
+.blue {
+    background-color: rgb(0, 0, 255);
+}
+
+.modal-btn {
+    background-color: white;
+    color: rgb(219, 17, 17);
+    box-shadow: none;
+    border: 0.1em solid white;
+    padding: 0.02em 0.68em;
+    margin: 0 0 0.03em 0.5em;
+    border-radius: 0.25em;
+    font-size: 0.9em;
+    font-weight: bold;
+}
+
+.modal-btn:hover {
+    background-color: rgb(112, 112, 112);
+    color: white;
+}
+
+@keyframes slideIn {
+    from {
+        top: -300px;
+        opacity: 0
+    }
+    to {
+        top: 0;
+        opacity: 1
+    }
+}
+
+.todayDate {
+    display: block;
+    text-align: center;
+    font-weight: bold;
+}
+
+.confirmation_box {
+    width: 700px;
+    height: 300px;
+    position: relative;
+    left: 420px;
+    bottom: 280px;
+    border-radius: 50px;
+}
+
+.optbox_header {
+    height: 200px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+.confirmation_box p {
+    position: relative;
+    left: 805px;
+    top: 20px;
+    font-size: 2rem;
+}
+
+.option_box {
+    display: flex;
+    justify-content: space-between;
+    width: 500px;
+    position: relative;
+    left: 70px;
+    top: 90px;
+}
+
+.proceed:hover {
+    box-shadow: 10px 10px 10px rgb(255, 253, 253);
+    cursor: pointer;
+    height: 40px;
+    width: 150px;
+    font-size: 2.8rem;
+}
+
+.donot_proceed:hover {
+    box-shadow: 10px 10px 10px rgb(253, 249, 249);
+    cursor: pointer;
+    height: 40px;
+    width: 150px;
+    font-size: 2.8rem;
+}
+
+.optbox_header i {
+    font-size: 3rem;
+    color: #FFF;
+    position: relative;
+    width: 28px;
+    height: 26px;
+    border: none;
+    left: 665px;
+    top: 5px;
+}
+
+.optbox_header i:hover {
+    cursor: pointer;
+    color: rgb(243, 149, 9);
+}
+
+@media only screen and (max-width: 440px) {
+    .confirmation_box {
+        width: 300px;
+        height: 300px;
+        background: #f7fffe;
+        position: relative;
+        left: 30px;
+        bottom: 280px;
+        border-radius: 20px;
+    }
+    .option_box {
+        display: flex;
+        justify-content: space-between;
+        width: 250px;
+        position: relative;
+        left: 0px;
+        top: 50px;
+    }
+    .optbox_header i {
+        font-size: 3rem;
+        color: rgb(1, 78, 150);
+        position: relative;
+        width: 28px;
+        height: 26px;
+        border: none;
+        left: 255px;
+        top: 5px;
+    }
+    .optbox_header i:hover {
+        cursor: pointer;
+        color: black;
+    }
 }
